cmake_minimum_required(VERSION 3.28)
project(XMOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(XMOJ
        1004.cpp
        1005.cpp
        1006.cpp
        1007.cpp
        1012.cpp
        1013.cpp
        1014.cpp
        1015.cpp
        1021.cpp
        1022.cpp
        1024.cpp
        1028.cpp
        1034.cpp
        1035.cpp
        1038.cpp
        1039.cpp
        1040.cpp
        1041.cpp
        1042.cpp
        1043.cpp
        1044.cpp
        1053.cpp
        1070.cpp
        1099.cpp
        1100.cpp
        1101.cpp
        1108.cpp
        1123.cpp
        1124.cpp
        1125.cpp
        1141.cpp
        1153.cpp
        1210.cpp
        1211.cpp
        1212.cpp
        1218.cpp
        1219.cpp
        1220.cpp
        1221.cpp
        1222.cpp
        1223.cpp
        1226.cpp
        1227.cpp
        1237.cpp
        1238.cpp
        1239.cpp
        1241.cpp
        1242.cpp
        1254.cpp
        1258.cpp
        1260.cpp
        1277.cpp
        1278.cpp
        1279.cpp
        1280.cpp
        1283.cpp
        1284.cpp
        1288.cpp
        1289.cpp
        1290.cpp
        1304.cpp
        1305.cpp
        1306.cpp
        1308.cpp
        1311.cpp
        1312.cpp
        1315.cpp
        1316.cpp
        1318.cpp
        1340.cpp
        1345.cpp
        1346.cpp
        1347.cpp
        1353.cpp
        1354.cpp
        1355.cpp
        1356.cpp
        1357.cpp
        1363.cpp
        1368.cpp
        1382.cpp
        1383.cpp
        1384.cpp
        1385.cpp
        1386.cpp
        1390.cpp
        1396.cpp
        1397.cpp
        1402.cpp
        1403.cpp
        1412.cpp
        1415.cpp
        1420.cpp
        1423.cpp
        1424.cpp
        1425.cpp
        1426.cpp
        1433.cpp
        1434.cpp
        1435.cpp
        1436.cpp
        1441.cpp
        1453.cpp
        1454.cpp
        1455.cpp
        1456.cpp
        1458.cpp
        1459.cpp
        1460.cpp
        1461.cpp
        1462.cpp
        1464.cpp
        1468.cpp
        1470.cpp
        1481.cpp
        1483.cpp
        1488.cpp
        1492.cpp
        1493.cpp
        1494.cpp
        1495.cpp
        1500.cpp
        1501.cpp
        1502.cpp
        1504.cpp
        1505.cpp
        1506.cpp
        1507.cpp
        1508.cpp
        1509.cpp
        1510.cpp
        1512.cpp
        1513.cpp
        1520.cpp
        1524.cpp
        1527.cpp
        1530.cpp
        1533.cpp
        1534.cpp
        1535.cpp
        1536.cpp
        1538.cpp
        1539.cpp
        1540.cpp
        1541.cpp
        1542.cpp
        1543.cpp
        1544.cpp
        1545.cpp
        1546.cpp
        1547.cpp
        1548.cpp
        1549.cpp
        1550.cpp
        1552.cpp
        1553.cpp
        1554.cpp
        1559.cpp
        1561.cpp
        1562.cpp
        1563.cpp
        1564.cpp
        1567.cpp
        1571.cpp
        1572.cpp
        1573.cpp
        1583.cpp
        1585.cpp
        1588.cpp
        1590.cpp
        1595.cpp
        1596.cpp
        1612.cpp
        1614.cpp
        1615.cpp
        1618.cpp
        1619.cpp
        1620.cpp
        1621.cpp
        1628.cpp
        1629.cpp
        1630.cpp
        1631.cpp
        1632.cpp
        1633.cpp
        1636.cpp
        1642.cpp
        1643.cpp
        1644.cpp
        1645.cpp
        1646.cpp
        1648.cpp
        1649.cpp
        1650.cpp
        1652.cpp
        1659.cpp
        1670.cpp
        1675.cpp
        1680.cpp
        1681.cpp
        1687.cpp
        1689.cpp
        1691.cpp
        1697.cpp
        1702.cpp
        1704.cpp
        1705.cpp
        1706.cpp
        1707.cpp
        1712.cpp
        1713.cpp
        1714.cpp
        1715.cpp
        1716.cpp
        1724.cpp
        1728.cpp
        1729.cpp
        1730.cpp
        1734.cpp
        1735.cpp
        1736.cpp
        1738.cpp
        1739.cpp
        1740.cpp
        1741.cpp
        1744.cpp
        1745.cpp
        1760.cpp
        1761.cpp
        1762.cpp
        1763.cpp
        1769.cpp
        1773.cpp
        1781.cpp
        1782.cpp
        1783.cpp
        1784.cpp
        1786.cpp
        1787.cpp
        1788.cpp
        1789.cpp
        1796.cpp
        1797.cpp
        1806.cpp
        1807.cpp
        1808.cpp
        1816.cpp
        1820.cpp
        1830.cpp
        1832.cpp
        1839.cpp
        1840.cpp
        1841.cpp
        1842.cpp
        1843.cpp
        1844.cpp
        1845.cpp
        1861.cpp
        1862.cpp
        1863.cpp
        1865.cpp
        1866.cpp
        1867.cpp
        1868.cpp
        1869.cpp
        1881.cpp
        1882.cpp
        1887.cpp
        1890.cpp
        1894.cpp
        1895.cpp
        1898.cpp
        1899.cpp
        2004.cpp
        2005.cpp
        2009.cpp
        2013.cpp
        2018.cpp
        2102.cpp
        2103.cpp
        2106.cpp
        2107.cpp
        2108.cpp
        2109.cpp
        2110.cpp
        2115.cpp
        2116.cpp
        2118.cpp
        2119.cpp
        2131.cpp
        2149.cpp
        2153.cpp
        2165.cpp
        2172.cpp
        2173.cpp
        2174.cpp
        2175.cpp
        2176.cpp
        2183.cpp
        2223.cpp
        2224.cpp
        2225.cpp
        2226.cpp
        2243.cpp
        2254.cpp
        2255.cpp
        2257.cpp
        2258.cpp
        2259.cpp
        2261.cpp
        2263.cpp
        2265.cpp
        2266.cpp
        2268.cpp
        2270.cpp
        2271.cpp
        2280.cpp
        2298.cpp
        2311.cpp
        2312.cpp
        2313.cpp
        2314.cpp
        2316.cpp
        2318.cpp
        2323.cpp
        2324.cpp
        2347.cpp
        2348.cpp
        2364.cpp
        2365.cpp
        2366.cpp
        2367.cpp
        2370.cpp
        2379.cpp
        2382.cpp
        2384.cpp
        2385.cpp
        2388.cpp
        2392.cpp
        2459.cpp
        2460.cpp
        2461.cpp
        2462.cpp
        2463.cpp
        2464.cpp
        2468.cpp
        2469.cpp
        2479.cpp
        2490.cpp
        2494.cpp
        2499.cpp
        2501.cpp
        2503.cpp
        2504.cpp
        2519.cpp
        2522.cpp
        2526.cpp
        2564.cpp
        2565.cpp
        2568.cpp
        2571.cpp
        2573.cpp
        2582.cpp
        2583.cpp
        2586.cpp
        2588.cpp
        2634.cpp
        2639.cpp
        2642.cpp
        2647.cpp
        2651.cpp
        2653.cpp
        2654.cpp
        2665.cpp
        2669.cpp
        2713.cpp
        2714.cpp
        2720.cpp
        2757.cpp
        2758.cpp
        2764.cpp
        2769.cpp
        2770.cpp
        2775.cpp
        2785.cpp
        2819.cpp
        2845.cpp
        2846.cpp
        2848.cpp
        2850.cpp
        2858.cpp
        2873.cpp
        3038.cpp
        3075.cpp
        3076.cpp
        3077.cpp
        3085.cpp
        3086.cpp
        3087.cpp
        3094.cpp
        3095.cpp
        3096.cpp
        3102.cpp
        3117.cpp
        3119.cpp
        3122.cpp
        3123.cpp
        3124.cpp
        3162.cpp
        3164.cpp
        3173.cpp
        3176.cpp
        3180.cpp
        3184.cpp
        3186.cpp
        3188.cpp
        3201.cpp
        3202.cpp
        3203.cpp
        3204.cpp
        3205.cpp
        3207.cpp
        3208.cpp
        3215.cpp
        3216.cpp
        3219.cpp
        3221.cpp
        3222.cpp
        3223.cpp
        3224.cpp
        3309.cpp
        3313.cpp
        3352.cpp
        3353.cpp
        3354.cpp
        3355.cpp
        3356.cpp
        3406.cpp
        3414.cpp
        3415.cpp
        3416.cpp
        3417.cpp
        3427.cpp
        3428.cpp
        3429.cpp
        3430.cpp
        3431.cpp
        3437.cpp
        3438.cpp
        3439.cpp
        3440.cpp
        3444.cpp
        3475.cpp
        3476.cpp
        3477.cpp
        3478.cpp
        3479.cpp
        3493.cpp
        3494.cpp
        3495.cpp
        3496.cpp
        3497.cpp
        3576.cpp
        3577.cpp
        3578.cpp
        3579.cpp
        3590.cpp
        3599.cpp
        3600.cpp
        3612.cpp
        3613.cpp
        3651.cpp
        3654.cpp
        3694.cpp
        3710.cpp
        3787.cpp
        3790.cpp
        3796.cpp
        3797.cpp
        3799.cpp
        3802.cpp
        3803.cpp
        3804.cpp
        3805.cpp
        3806.cpp
        3807.cpp
        3808.cpp
        3809.cpp
        3810.cpp
        3812.cpp
        3822.cpp
        3829.cpp
        3830.cpp
        3833.cpp
        3834.cpp
        3835.cpp
        3839.cpp
        3840.cpp
        3841.cpp
        3844.cpp
        3848.cpp
        3852.cpp
        3866.cpp
        3870.cpp
        3871.cpp
        3872.cpp
        3873.cpp
        3912.cpp
        3913.cpp
        3917.cpp
        3918.cpp
        4048.cpp
        4052.cpp
        4053.cpp
        4111.cpp
        4112.cpp
        4113.cpp
        4115.cpp
        4117.cpp
        4118.cpp
        4123.cpp
        4124.cpp
        4126.cpp
        4127.cpp
        4168.cpp
        4171.cpp
        4185.cpp
        4204.cpp
        4205.cpp
        4207.cpp
        4208.cpp
        4209.cpp
        4210.cpp
        4211.cpp
        4267.cpp
        4269.cpp
        4282.cpp
        4285.cpp
        4286.cpp
        4287.cpp
        4305.cpp
        4306.cpp
        4308.cpp
        4353.cpp
        4354.cpp
        4604.cpp
        4610.cpp
        4611.cpp
        4616.cpp
        4617.cpp
        4620.cpp
        4644.cpp
        4653.cpp
        4654.cpp
        4663.cpp
        4664.cpp
        4665.cpp
        4666.cpp
        4685.cpp
        4715.cpp
        4716.cpp
        4727.cpp
        4728.cpp
        4811.cpp
        4817.cpp
        4823.cpp
        4825.cpp
        4845.cpp
        4884.cpp
        4885.cpp
        4886.cpp
        4889.cpp
        4891.cpp
        5068.cpp
        5118.cpp
        5130.cpp
        5157.cpp
        5160.cpp
        5295.cpp
        5323.cpp
        5340.cpp
        5346.cpp
        5350.cpp
        5359.cpp
        5365.cpp
        5369.cpp
        5371.cpp
        5405.cpp
        5415.cpp
        5416.cpp
        5418.cpp
        5419.cpp
        5421.cpp
        5422.cpp
        5423.cpp
        5424.cpp
        5425.cpp
        5426.cpp
        5438.cpp
        5650.cpp
        5651.cpp
        5654.cpp
        5747.cpp
        5748.cpp
        5755.cpp
        5756.cpp
        5757.cpp
        5758.cpp
        5760.cpp
        5940.cpp
        5941.cpp
        5945.cpp
        5946.cpp
        5972.cpp
        5973.cpp
        5974.cpp
        5975.cpp
        5976.cpp
        5977.cpp
        5998.cpp
        6009.cpp
        6010.cpp
        6041.cpp
        6042.cpp
        6043.cpp
        6053.cpp
        6054.cpp
        6055.cpp
        6056.cpp
        6068.cpp
        6071.cpp
        6077.cpp
        6087.cpp
        6101.cpp
        6102.cpp
        6108.cpp
        6110.cpp
        6116.cpp
        6118.cpp
        6119.cpp
        6124.cpp
        6126.cpp
        6181.cpp
        6197.cpp
        6270.cpp
        6279.cpp
        6280.cpp
        6283.cpp
        6316.cpp
        6355.cpp
        6356.cpp
        6357.cpp
        6358.cpp
        6369.cpp
        6392.cpp
        6396.cpp
        6420.cpp
        6463.cpp
        6545.cpp
        6553.cpp
        6557.cpp
        6559.cpp
        6560.cpp
        6562.cpp
        6563.cpp
        6569.cpp
        6570.cpp
        6596.cpp
        6598.cpp
        6600.cpp
        6607.cpp
        6611.cpp
        6618.cpp
        6652.cpp
        6703.cpp
        6832.cpp
        6884.cpp
        6957.cpp
        7044.cpp
        7045.cpp
        7244.cpp
        7245.cpp
        7246.cpp
        7247.cpp
        7530.cpp
        7569.cpp
        7571.cpp
        7612.cpp
        7715.cpp
        8585.cpp)
